welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var nbBaggle = 0
do {
	for (i <- 1 to 5){
		avance()
		if (estSurBiscuit()){
			nbBaggle = nbBaggle +1
		}
	}if (nbBaggle>2){
		gauche() else droite()
	}
} while (!sortieTrouvee())
